# servant-with-closures

./: .gitignore  LICENSE  README.md  servant-with-closures.cabal
src/: ServantClosures.hs
src/ServantClosures/: Internal.hs
src/ServantClosures/Internal/: Closure.hs  Closure.hs~  Servant.hs  Servant.hs~
test/: ServantClosuresSpec.hs
