Name:                   servant-with-closures
Version:                0.0.1
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      ServantClosures
  Other-Modules:        ServantClosures.Internal
                      , ServantClosures.Internal.Servant
                      , ServantClosures.Internal.Closure
  Build-Depends:        base >= 4 && < 5
                      , warp
                      , wai
                      , base64-bytestring
                      , aeson
                      , servant
                      , servant-client
                      , servant-server
                      , distributed-static >= 0.3.1
                      , rank1dynamic
                      , binary
                      , bytestring
                      , text

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
